Opened 14 years ago
Closed 14 years ago
#6699 closed bug (fixed)
app_server ignores clicks on decorator
Reported by: | axeld | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/app_server | Version: | R1/alpha2 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
When you quickly click on two different regions of the decorator (for example, resize and title bar, or border and title bar), the second click is ignored.
Note:
See TracTickets
for help on using tickets.
Fixed in hrev39064.