* The default decorator now remembers its last mouse down action, and only   recognizes a double click as double click if the action didn't change. * This fixes bug #6699.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39064 a95241bf-73f2-0310-859d-f6bbb57e9c96